Fixed extra white space in mobile on homepage

--- a/styles/main.css
+++ b/styles/main.css
@@ -239,7 +239,6 @@ video {
 .video-overlay > div {
   color: #e3871a;
   text-align: center;
-  padding: 0 10px;
 }
 
 .video-overlay a {
